force-app/main/default/objects/ClaimPaymentSummary/ClaimPaymentSummary.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>