force-app/main/default/objects/ClaimPaymentSummary/fields/Branch_Claim__c.field-meta.xml
<CustomField>
    <fullName>Branch_Claim__c</fullName>
    <label>Branch Claim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch</valueSetName>
    </valueSet>
</CustomField>