force-app/main/default/objects/ClaimPaymentSummary/fields/Claim_Limit__c.field-meta.xml
<CustomField>
    <fullName>Claim_Limit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Limit</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Claim Payment Summaries</relationshipLabel>
    <relationshipName>Claim_Payment_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>