force-app/main/default/objects/ClaimPaymentSummary/fields/Claim_Statement_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Statement_Type__c</fullName>
    <label>Claim Statement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subrogasi</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>