force-app/main/default/objects/ClaimPaymentSummary/fields/Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status__c</fullName>
    <formula>TEXT( Claim.Status )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Status</label>
    <type>Text</type>
</CustomField>