force-app/main/default/objects/ClaimPaymentSummary/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Status</valueSetName>
    </valueSet>
</CustomField>