force-app/main/default/objects/ClaimPaymentSummary/fields/Loss_Estimation__c.field-meta.xml
<CustomField>
    <fullName>Loss_Estimation__c</fullName>
    <label>Loss Estimation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>