force-app/main/default/objects/ClaimPaymentSummary/recordTypes/Claim_Statement.recordType-meta.xml
<RecordType>
    <fullName>Claim_Statement</fullName>
    <active>true</active>
    <label>Claim Statement</label>
</RecordType>