force-app/main/default/objects/ClaimPaymentSummary/recordTypes/LKS.recordType-meta.xml
<RecordType>
    <fullName>LKS</fullName>
    <active>true</active>
    <label>LKS</label>
</RecordType>